--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
   <body>
     <div class="container">
       <div class="col left">
+        <div class="grid">
+          <div class="cell wide">
 
+          </div>
+          <div class="cell"></div>
+
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+
+          <div class="cell"></div>
+          <div class="cell"></div>
+          <div class="cell"></div>
+        </div>
       </div>
       <div class="col right">
 
