--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <div class="container">
       <div class="col left">
         <div class="grid">
-          <div class="cell wide">
+          <div class="cell wide green">
 
           </div>
-          <div class="cell"></div>
+          <div class="cell yellow"></div>
 
-          <div class="cell"></div>
-          <div class="cell"></div>
-          <div class="cell"></div>
+          <div class="cell blue"></div>
+          <div class="cell red"></div>
+          <div class="cell green"></div>
 
-          <div class="cell"></div>
-          <div class="cell"></div>
-          <div class="cell"></div>
+          <div class="cell orange"></div>
+          <div class="cell blue"></div>
+          <div class="cell orange"></div>
         </div>
       </div>
       <div class="col right">
