Font-awesome icons

--- a/index.html
+++ b/index.html
@@ -3,23 +3,52 @@
     <title>Bradley Cooper</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/reset.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
+    <script defer src="https://pro.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-jTxqWCb7UqRDQDd2Nkuh5BkHe9k+ElbFLa3NaJfid5kBK/+cVktzVRXrw0isFWxf" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/regular.js" integrity="sha384-t7yHmUlwFrLxHXNLstawVRBMeSLcXTbQ5hsd0ifzwGtN7ZF7RZ8ppM7Ldinuoiif" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
       <div class="col left">
         <div class="grid">
           <div class="cell wide green">
-
+            <h1>Bradley Cooper</h1>
+            <p>I'm a Graphic Designer, Coder & Entrepeneur.</p>
+            <p>Take a look at my portfolio to see what I was working.</p>
+            <ul class="buttons">
+              <li>
+                <i class="far fa-arrow-alt-circle-down"></i>
+                <p>Resume</p>
+              </li>
+              <li>
+                <i class="far fa-info-circle"></i>
+                <p>Contact</p>
+              </li>
+            </ul>
           </div>
-          <div class="cell yellow"></div>
+          <div class="cell yellow">
+            <i class="far fa-user"></i>
+          </div>
 
-          <div class="cell blue"></div>
-          <div class="cell red"></div>
-          <div class="cell green"></div>
+          <div class="cell blue">
+            <i class="far fa-check-circle"></i>
+          </div>
+          <div class="cell red">
+            <i class="far fa-book"></i>
+          </div>
+          <div class="cell green">
+            <i class="far fa-edit"></i>
+          </div>
 
-          <div class="cell orange"></div>
-          <div class="cell blue"></div>
-          <div class="cell orange"></div>
+          <div class="cell orange">
+            <i class="far fa-plus"></i>
+          </div>
+          <div class="cell blue">
+            <i class="far fa-paper-plane"></i>
+          </div>
+          <div class="cell orange">
+            <i class="far fa-desktop"></i>
+          </div>
         </div>
       </div>
       <div class="col right">
