--- a/index.html
+++ b/index.html
@@ -3,51 +3,72 @@
     <title>Bradley Cooper</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/reset.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
-    <script defer src="https://pro.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-jTxqWCb7UqRDQDd2Nkuh5BkHe9k+ElbFLa3NaJfid5kBK/+cVktzVRXrw0isFWxf" crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/regular.js" integrity="sha384-t7yHmUlwFrLxHXNLstawVRBMeSLcXTbQ5hsd0ifzwGtN7ZF7RZ8ppM7Ldinuoiif" crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
       <div class="col left">
         <div class="grid">
           <div class="cell wide green">
-            <h1>Bradley Cooper</h1>
-            <p>I'm a Graphic Designer, Coder & Entrepeneur.</p>
-            <p>Take a look at my portfolio to see what I was working.</p>
-            <ul class="buttons">
-              <li>
-                <i class="far fa-arrow-alt-circle-down"></i>
-                <p>Resume</p>
-              </li>
-              <li>
-                <i class="far fa-info-circle"></i>
-                <p>Contact</p>
-              </li>
-            </ul>
+            <div class="content">
+              <h1>Bradley Cooper</h1>
+              <p>I'm a Graphic Designer, Coder & Entrepeneur.</p>
+              <p>Take a look at my portfolio to see what I was working.</p>
+              <ul class="buttons">
+                <li>
+                  <i class="fas fa-arrow-alt-circle-down"></i>
+                  <p>Resume</p>
+                </li>
+                <li>
+                  <i class="fas fa-info-circle"></i>
+                  <p>Contact</p>
+                </li>
+              </ul>
+            </div>
           </div>
           <div class="cell yellow">
-            <i class="far fa-user"></i>
+            <div class="content">
+              <i class="fas fa-user"></i>
+              <p>Profile</p>
+            </div>
           </div>
 
           <div class="cell blue">
-            <i class="far fa-check-circle"></i>
+            <div class="content">
+              <i class="fas fa-check-circle"></i>
+              <p>Experience</p>
+            </div>
           </div>
           <div class="cell red">
-            <i class="far fa-book"></i>
+            <div class="content">
+              <i class="fas fa-book"></i>
+              <p>Education</p>
+            </div>
           </div>
           <div class="cell green">
-            <i class="far fa-edit"></i>
+            <div class="content">
+              <i class="fas fa-edit"></i>
+              <p>Blog</p>
+            </div>
           </div>
 
           <div class="cell orange">
-            <i class="far fa-plus"></i>
+            <div class="content">
+              <i class="fas fa-plus"></i>
+              <p>Social Menu</p>
+            </div>
           </div>
           <div class="cell blue">
-            <i class="far fa-paper-plane"></i>
+            <div class="content">
+              <i class="fas fa-paper-plane"></i>
+              <p>Contact</p>
+            </div>
           </div>
           <div class="cell orange">
-            <i class="far fa-desktop"></i>
+            <div class="content">
+              <i class="fas fa-desktop"></i>
+              <p>Portfolio</p>
+            </div>
           </div>
         </div>
       </div>
