--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         <div class="grid">
           <div class="cell wide green">
             <div class="content">
-              <h1>Bradley Cooper</h1>
-              <p>I'm a Graphic Designer, Coder & Entrepeneur.</p>
-              <p>Take a look at my portfolio to see what I was working.</p>
+              <div class="blurb">
+                <h1>Bradley Cooper</h1>
+                <p>I'm a Graphic Designer, Coder & Entrepeneur.</p>
+                <p>Take a look at my portfolio to see what I was working.</p>
+              </div>
               <ul class="buttons">
                 <li>
                   <i class="fas fa-arrow-alt-circle-down"></i>
