--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
           <div class="cell wide green">
             <div class="content">
               <div class="blurb">
-                <h1>Bradley Cooper</h1>
-                <p>I'm a Graphic Designer, Coder & Entrepeneur.</p>
+                <h1>Kolya Venturi</h1>
+                <p>I'm a programmer playing around with CSS.</p>
                 <p>Take a look at my portfolio to see what I was working.</p>
               </div>
               <ul class="buttons">
@@ -75,7 +75,11 @@
         </div>
       </div>
       <div class="col right">
-
+        <ul class="images">
+          <li>
+            <img src="images/image1.png" />
+          </li>
+        </ul>
       </div>
     </div>
   </body>
