Image nav buttons

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
         </div>
       </div>
       <div class="col right">
+        <div class="image_nav">
+          <div class="buttons">
+            <i class="fas fa-chevron-circle-left"></i>
+            <i class="fas fa-chevron-circle-right"></i>
+          </div>
+        </div>
         <ul class="images">
           <li>
             <img src="images/image1.png" />
