--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
         </div>
       </div>
       <div class="col right">
+        <div class="breadcrumbs">
+          <i class="fas fa-circle"></i>
+          <i class="fas fa-circle"></i>
+          <i class="fas fa-circle"></i>
+        </div>
         <div class="image_nav">
           <div class="buttons">
             <i class="fas fa-chevron-circle-left"></i>
